# PE-Hackathon-Template-2026

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yml  docker-entrypoint.sh  loadtest_bronze.js  loadtest_gold.js  loadtest_silver.js  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
app/: __init__.py  cache.py  database.py  utils.py
app/models/: domain.py  schemas.py
app/routes/: events.py  urls.py  users.py
docs/: README.md  SUMMARY.md  error-handling.md  failure-modes.md  manual-alert-testing.md  observability.md  reliability-bonus-quest.md  resilience-runbook.md
docs/architecture-and-api/: api-reference.md  data-model-and-validation.md  developer-workflow.md  diagrams.md  overview.md
docs/reliability-and-bonus-quest/: bonus-quest-report.md  diagrams.md  error-handling-contract.md  overview.md  resilience-and-recovery.md
docs/scalability-observability-and-operations/: diagrams.md  load-testing.md  monitoring-and-alerting.md  operations-playbook.md  overview.md
docs/tracks/track-1-core-service/: diagrams.md
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: gold-command-center.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
nginx/: nginx.conf
scripts/: test_alerts.sh
seed_data/: events.csv  urls.csv  users.csv
tests/: conftest.py  test_error_handling.py  test_integration.py  test_observability.py  test_utils.py
