[project]
name = "mlh-pe-hackathon"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "faker>=33.0",
    "fastapi>=0.135.3",
    "flask>=3.1",
    "peewee>=3.17",
    "psycopg2-binary>=2.9",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.22",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.43.0",
]
