[project]
name = "mlh-pe-hackathon"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "faker>=33.0",
    "fastapi>=0.135.3",
    "flask>=3.1",
    "orjson>=3.11.8",
    "peewee>=3.17",
    "prometheus-client>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psutil>=7.1.0",
    "psycopg2-binary>=2.9",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.22",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.43.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=70"
testpaths = ["tests"]
